LDEV-2041: Added full functionality of exporting to XLS/CSV to Daco tool.